# AgentContext

./: .gitignore  CLAUDE.md  GEMINI.md  macros.py  mkdocs.yml  pyproject.toml  tmpclaude-956a-cwd
.github/workflows/: deploy.yml
brainstorms/: investigation-db.json  pathseeker.json
discussions/: dq.json  gics.json  investigation-db.json  pathseeker.json  pattern-identifier.json  staging.json
docs/: .pages  index.md
docs/Brainstorms/: index.md  investigation-db.md
docs/Claude/discussions/: .pages  GicsDiscussion.md  index.md
docs/Claude/notes/: data-alchemy.md  index.md
docs/Claude/sessions/: .pages  2026-01-11.md  2026-01-12.md  index.md  l-2026-01-12.md  l-2026-01-13.md  w-2026-01-12.md  w-2026-01-13.md
docs/Discussion/: index.md
docs/Gemini/notes/: index.md
docs/Gemini/sessions/: index.md
docs/Notes/: index.md
docs/RunBooks/: index.md
docs/Sessions/: index.md
docs/Sessions/2026-01-13/: claude-windows.md
docs/Sessions/2026-01-14/: claude-linux.md  claude-windows.md
docs/Sessions/2026-01-16/: claude-windows.md
docs/Sessions/claude/: l-2026-01-12.md  w-2026-01-11.md  w-2026-01-16.md
docs/Sessions/gemini/: index.md
docs/brainstorms/: index.md  investigation-db.md  pathseeker.md  staging-manifest.md
docs/discussions/: index.md
docs/ideas/: alchmy-db.md  index.md  investigation-db.md  pathseeker.md
docs/notes/: bbocax-file-patterns.md  bbocax.md  index.md
docs/sessions/: .pages  index.md
docs/sessions/claude/: index.md  l-2026-01-13.md  l-2026-01-15.md  l-2026-01-16.md  l-2026-01-18.md  (+20 more)
docs/stylesheets/: extra.css
(+16 files in other folders)
